--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -390,7 +390,7 @@
             color: var(--text-primary);
             max-width: 200px;
             word-wrap: break-word;
-            text-align: center;
+            text-align: left;
             padding-left: 12px;
             line-height: 1.3;
             white-space: normal;
@@ -627,11 +627,11 @@
             }
 
             .course-name-cell {
-                width: 35%;
+                width: 30%;
                 font-size: 0.7em;
                 white-space: normal;
                 word-wrap: break-word;
-                text-align: center !important;
+                text-align: left !important;
                 line-height: 1.3;
                 overflow: visible;
                 padding: 8px 6px;
@@ -645,6 +645,11 @@
                 text-align: center;
                 font-size: 0.7em;
                 font-weight: 500;
+            }
+
+            .present-hours-cell,
+            .absent-hours-cell {
+                width: 10%;
             }
 
             .percentage-cell,
@@ -762,10 +767,10 @@
             }
 
             .course-name-cell {
-                width: 35%;
+                width: 30%;
                 font-size: 0.6em;
                 line-height: 1.2;
-                text-align: center !important;
+                text-align: left !important;
                 padding-left: 4px;
                 padding-right: 4px;
                 white-space: normal;
@@ -779,6 +784,11 @@
                 width: 8%;
                 font-size: 0.6em;
                 text-align: center;
+            }
+
+            .present-hours-cell,
+            .absent-hours-cell {
+                width: 10%;
             }
 
             .percentage-cell,
@@ -895,12 +905,12 @@
                 <thead>
                     <tr>
                         <th style="width: 10%;">Code</th>
-                        <th style="width: 35%;">Course</th>
+                        <th style="width: 30%;">Course</th>
                         <th style="width: 8%;">Total</th>
-                        <th style="width: 8%;">Present</th>
-                        <th style="width: 8%;">Absent</th>
+                        <th style="width: 10%;">Present</th>
+                        <th style="width: 10%;">Absent</th>
                         <th style="width: 10%;">%</th>
-                        <th style="width: 10%;">% (Med)</th>
+                        <th style="width: 11%;">% (Med)</th>
                         <th style="width: 11%;">Updated</th>
                     </tr>
                 </thead>
